fix: prevent select text from overlapping chevron

--- a/packages/form-fields/select/style.module.css
+++ b/packages/form-fields/select/style.module.css
@@ -19,6 +19,7 @@
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
   background-size: 16px 12px;
+  padding-right: 36px;
 }
 
 .hasError {
